--- a/SASS/components/studio/_features.scss
+++ b/SASS/components/studio/_features.scss
@@ -1,14 +1,7 @@
 .features {
-  width: 1600px;
   padding-top: 94px;
   padding-bottom: 94px;
   @media screen and (max-width: 1199px) {
-    width: 768px;
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-  @media screen and (max-width: 767px) {
-    width: 480px;
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -16,40 +9,31 @@
 .features-list {
   display: flex;
   justify-content: space-between;
-  width: 1200px;
   margin: 0 auto;
   @media screen and (max-width: 1199px) {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    width: 768px;
-  }
-  @media screen and (max-width: 767px) {
-    display: flex;
-    flex-wrap: wrap;
-    width: 480px;
   }
   &__item {
     width: 270px;
     &:nth-child(1) .features-list__subtitle::before {
-      background-image: url("../../../img/icons/antenna.png");
+      background-image: url("../img/icons/antenna.png");
     }
     &:nth-child(2) .features-list__subtitle::before {
-      background-image: url("../../../img/icons/clock.png");
+      background-image: url("../img/icons/clock.png");
     }
     &:nth-child(3) .features-list__subtitle::before {
-      background-image: url("../../../img/icons/diagram.png");
+      background-image: url("../img/icons/diagram.png");
     }
     &:nth-child(4) .features-list__subtitle::before {
-      background-image: url("../../../img/icons/astronaut.png");
+      background-image: url("../img/icons/astronaut.png");
     }
     @media screen and (max-width: 1199px) {
-      width: 354px;
-      margin-left: 15px;
+      width: calc((100% - 30px)/2);
     }
     @media screen and (max-width: 767px) {
-      width: 450px;
-      margin-left: 15px;
+      width: 100%;
     }
   }
   &__svg {
@@ -71,7 +55,6 @@
       $text-transform: uppercase,
       $text-align: left
     );
-    margin-top: 30px;
     margin-bottom: 10px;
     color: getColor("text");
     @media screen and (max-width: 767px) {
