--- a/SASS/components/studio/_header.scss
+++ b/SASS/components/studio/_header.scss
@@ -72,6 +72,11 @@
     }
   }
 }
+.navigation{
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
 .nav-list {
   @extend %flex;
   @include fonts(500, 14px, 0.02em, $text-align: left);
