--- a/SASS/components/studio/_hero.scss
+++ b/SASS/components/studio/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  width: 1600px;
+  width: 100%;
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: getColor("fourth-background");
@@ -25,8 +25,7 @@
       url("/img/background/desktop@2x.png");
   }
   @media screen and (max-width: 1199px) {
-    padding: 118px;
-    width: 768px;
+    padding: 118px 0;
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
@@ -47,8 +46,6 @@
     }
   }
   @media screen and (max-width: 767px) {
-    padding: 118px 0;
-    width: 480px;
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
