--- a/SASS/components/studio/_modal.scss
+++ b/SASS/components/studio/_modal.scss
@@ -6,9 +6,6 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 99;
-  @media screen and (max-width: 1199px) {
-    width: 768px;
-  }
 }
 .modal {
   position: fixed;
@@ -18,12 +15,6 @@
   background: getColor("color");
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  @media screen and (max-width: 1199px) {
-    width: 450px;
-  }
-  @media screen and (max-width: 767px) {
-    left: 15px;
-  }
   &__btn-submit {
     @include fonts(700, $letter-spacing: 0.96px, $line-height: 30px);
     width: 200px;
@@ -33,13 +24,16 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: getColor("background");
     border: none;
-    margin: 30px 124px 0 124px;
+    margin: 30px auto 0;
+    @media screen and (max-width: 1199px) {
+      margin: 30px auto 0;
+    }
   }
   &__text {
     @include fonts($font-size: 14px, $line-height: 1.71);
     margin-top: 20px;
     @media screen and (max-width: 1199px) {
-      @include fonts($font-size: 12px);
+      @include fonts($font-size: 12px,$text-align: left);
     }
   }
   &-link {
@@ -51,7 +45,8 @@
     color: getColor("text");
     margin-bottom: 12px;
     @media screen and (max-width: 1199px) {
-      width: 370px;
+      max-width: 370px;
+      width: 100%;
     }
   }
   &__checkbox {
@@ -65,15 +60,15 @@
   &__input {
     margin-top: 4px;
     margin-bottom: 10px;
-    width: 448px;
+    max-width: 448px;
+    width: 100%;
     height: 40px;
     border-radius: 4px;
     @include bordered(getColor("border-modal"));
     outline: none;
-    padding: 12px 0 12px 42px;
     cursor: pointer;
     @media screen and (max-width: 1199px) {
-      width: 370px;
+      max-width: 370px;
     }
   }
   &__input:hover,
@@ -126,6 +121,10 @@
     border-radius: 4px;
     border: 1px solid getColor("border-modal");
     padding: 12px 16px;
+    @media screen and (max-width: 1199px) {
+      max-width: 370px;
+      width: 100%;
+    }
   }
 }
 .modal-close {
