--- a/SASS/components/studio/_works.scss
+++ b/SASS/components/studio/_works.scss
@@ -1,7 +1,8 @@
 .works {
-  width: 1200px;
-  margin-left: 215px;
-  margin-bottom: 94px;
+  padding-bottom: 94px;
+  @media screen and (max-width: 1199px){
+  display: none;
+}
   &-list {
   @extend %flex;
   position: relative;
@@ -11,7 +12,8 @@
   @include fonts(700, 14px, 0.42px, $text-transform:uppercase);
   content: "";
   position: absolute;
-  width: 370px;
+  max-width: 370px;
+  width: 100%;
   bottom: 0;
   height: 70px;
   background:  getColor('background-secondary');
@@ -27,7 +29,8 @@
   content: "Дизайнерські рішення ";
 }
 &-list__item{
-  width: 370px;
+  max-width: 370px;
+  width: 100%;
   height: 294px;
 }
 &-list__item > img{
@@ -37,13 +40,8 @@
 }
 }
 .our-skills {
-    @include fonts(700, 36px, 0.03em);
+  @include fonts(700, 36px, 0.03em);
   color:  getColor('text');
   margin-top: 0;
   margin-bottom: 50px;
-}
-@media screen and (max-width: 1200px){
-  .works{
-  display: none;
-}
 }
