--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@
   justify-content: center;
 }
 
-.join, .footer-wrapper__left, .modal-list__label, .contacts-list, .pages-list {
+.join, .modal-list__label, .contacts-list, .pages-list {
   display: flex;
   flex-direction: column;
 }
@@ -176,7 +176,7 @@ button {
   letter-spacing: 0.03em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: #212121;
   margin: 0 88px 0 0;
@@ -197,13 +197,19 @@ button {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .navigation {
+    display: none;
+  }
+}
+
 .nav-list {
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.02em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   width: 281px;
 }
@@ -246,7 +252,7 @@ button {
   letter-spacing: 0.02em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: #757575;
 }
@@ -338,7 +344,7 @@ button {
   letter-spacing: 0.8px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #212121;
 }
@@ -355,7 +361,7 @@ button {
   letter-spacing: 0.68px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #2196f3;
 }
@@ -365,7 +371,7 @@ button {
   letter-spacing: 0.48px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #757575;
 }
@@ -382,7 +388,7 @@ button {
   letter-spacing: 0.36px;
   line-height: 1.22;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #2196f3;
 }
@@ -394,7 +400,7 @@ button {
 }
 
 .hero {
-  width: 1600px;
+  width: 100%;
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: #2F303A;
@@ -410,8 +416,7 @@ button {
 }
 @media screen and (max-width: 1199px) {
   .hero {
-    padding: 118px;
-    width: 768px;
+    padding: 118px 0;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/background/tablet.png");
   }
 }
@@ -422,8 +427,6 @@ button {
 }
 @media screen and (max-width: 767px) {
   .hero {
-    padding: 118px 0;
-    width: 480px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/background/phone.png");
   }
 }
@@ -453,7 +456,7 @@ button {
   letter-spacing: 0.06em;
   line-height: 30px;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   width: 216px;
   height: 50px;
@@ -477,11 +480,6 @@ button {
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 99;
 }
-@media screen and (max-width: 1199px) {
-  .backdrop {
-    width: 768px;
-  }
-}
 
 .modal {
   position: fixed;
@@ -491,23 +489,13 @@ button {
   background: #FFF;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
-@media screen and (max-width: 1199px) {
-  .modal {
-    width: 450px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .modal {
-    left: 15px;
-  }
-}
 .modal__btn-submit {
   font-size: 16px;
   font-weight: 700;
   letter-spacing: 0.96px;
   line-height: 30px;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   width: 200px;
   height: 50px;
@@ -516,7 +504,12 @@ button {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #ffffff;
   border: none;
-  margin: 30px 124px 0 124px;
+  margin: 30px auto 0;
+}
+@media screen and (max-width: 1199px) {
+  .modal__btn-submit {
+    margin: 30px auto 0;
+  }
 }
 .modal__text {
   font-size: 14px;
@@ -524,7 +517,7 @@ button {
   letter-spacing: normal;
   line-height: 1.71;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   margin-top: 20px;
 }
@@ -535,8 +528,8 @@ button {
     letter-spacing: normal;
     line-height: normal;
     text-decoration: none;
-    text-transform: normal;
-    text-align: center;
+    text-transform: none;
+    text-align: left;
   }
 }
 .modal-link {
@@ -549,14 +542,15 @@ button {
   letter-spacing: 0.6px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #212121;
   margin-bottom: 12px;
 }
 @media screen and (max-width: 1199px) {
   .modal__title {
-    width: 370px;
+    max-width: 370px;
+    width: 100%;
   }
 }
 .modal__checkbox {
@@ -569,17 +563,17 @@ button {
 .modal-list__input {
   margin-top: 4px;
   margin-bottom: 10px;
-  width: 448px;
+  max-width: 448px;
+  width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   outline: none;
-  padding: 12px 0 12px 42px;
   cursor: pointer;
 }
 @media screen and (max-width: 1199px) {
   .modal-list__input {
-    width: 370px;
+    max-width: 370px;
   }
 }
 .modal-list__input:hover, .modal-list__input:focus {
@@ -604,7 +598,7 @@ button {
   letter-spacing: 0.12px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: #757575;
   position: relative;
@@ -623,7 +617,7 @@ button {
   letter-spacing: 0.12px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: rgba(117, 117, 117, 0.5);
 }
@@ -633,7 +627,7 @@ button {
   letter-spacing: 0.12px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: rgba(117, 117, 117, 0.5);
 }
@@ -643,6 +637,12 @@ button {
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   padding: 12px 16px;
+}
+@media screen and (max-width: 1199px) {
+  .modal-list__textarea {
+    max-width: 370px;
+    width: 100%;
+  }
 }
 
 .modal-close {
@@ -667,20 +667,11 @@ button {
 }
 
 .features {
-  width: 1600px;
   padding-top: 94px;
   padding-bottom: 94px;
 }
 @media screen and (max-width: 1199px) {
   .features {
-    width: 768px;
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .features {
-    width: 480px;
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -689,7 +680,6 @@ button {
 .features-list {
   display: flex;
   justify-content: space-between;
-  width: 1200px;
   margin: 0 auto;
 }
 @media screen and (max-width: 1199px) {
@@ -697,41 +687,31 @@ button {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    width: 768px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .features-list {
-    display: flex;
-    flex-wrap: wrap;
-    width: 480px;
   }
 }
 .features-list__item {
   width: 270px;
 }
 .features-list__item:nth-child(1) .features-list__subtitle::before {
-  background-image: url("../../../img/icons/antenna.png");
+  background-image: url("../img/icons/antenna.png");
 }
 .features-list__item:nth-child(2) .features-list__subtitle::before {
-  background-image: url("../../../img/icons/clock.png");
+  background-image: url("../img/icons/clock.png");
 }
 .features-list__item:nth-child(3) .features-list__subtitle::before {
-  background-image: url("../../../img/icons/diagram.png");
+  background-image: url("../img/icons/diagram.png");
 }
 .features-list__item:nth-child(4) .features-list__subtitle::before {
-  background-image: url("../../../img/icons/astronaut.png");
+  background-image: url("../img/icons/astronaut.png");
 }
 @media screen and (max-width: 1199px) {
   .features-list__item {
-    width: 354px;
-    margin-left: 15px;
+    width: calc((100% - 30px) / 2);
   }
 }
 @media screen and (max-width: 767px) {
   .features-list__item {
-    width: 450px;
-    margin-left: 15px;
+    width: 100%;
   }
 }
 .features-list__svg {
@@ -757,7 +737,6 @@ button {
   text-decoration: none;
   text-transform: uppercase;
   text-align: left;
-  margin-top: 30px;
   margin-bottom: 10px;
   color: #212121;
 }
@@ -783,15 +762,18 @@ button {
   letter-spacing: 0.03em;
   line-height: 1.7;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: #757575;
 }
 
 .works {
-  width: 1200px;
-  margin-left: 215px;
-  margin-bottom: 94px;
+  padding-bottom: 94px;
+}
+@media screen and (max-width: 1199px) {
+  .works {
+    display: none;
+  }
 }
 .works-list {
   position: relative;
@@ -806,7 +788,8 @@ button {
   text-align: center;
   content: "";
   position: absolute;
-  width: 370px;
+  max-width: 370px;
+  width: 100%;
   bottom: 0;
   height: 70px;
   background: rgba(47, 48, 58, 0.8);
@@ -822,7 +805,8 @@ button {
   content: "Дизайнерські рішення ";
 }
 .works-list__item {
-  width: 370px;
+  max-width: 370px;
+  width: 100%;
   height: 294px;
 }
 .works-list__item > img {
@@ -835,23 +819,22 @@ button {
   letter-spacing: 0.03em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #212121;
   margin-top: 0;
   margin-bottom: 50px;
 }
 
-@media screen and (max-width: 1200px) {
-  .works {
-    display: none;
-  }
-}
 .team {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: #F5F4FA;
-  width: 1600px;
+}
+@media screen and (nax-width: 1199px) {
+  .team {
+    padding: 60px 15px;
+  }
 }
 .team__title {
   font-size: 36px;
@@ -859,15 +842,26 @@ button {
   letter-spacing: 0.03em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   margin-bottom: 50px;
   color: #212121;
 }
+@media screen and (max-width: 1199px) {
+  .team__title {
+    margin-bottom: 30px;
+  }
+}
 
 .team-list {
-  width: 1200px;
   margin: 0 auto;
+}
+@media screen and (max-width: 1199px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
+  }
 }
 .team-list__text {
   font-size: 16px;
@@ -875,7 +869,7 @@ button {
   letter-spacing: 0.03em;
   line-height: 1.19;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #757575;
 }
@@ -885,7 +879,7 @@ button {
   letter-spacing: 0.03em;
   line-height: 1.19;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   margin-bottom: 10px;
   color: #212121;
@@ -894,13 +888,36 @@ button {
   background-color: #FFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  width: 270px;
   padding-bottom: 30px;
+}
+@media screen and (max-width: 1199px) {
+  .team-list__item {
+    padding-bottom: 24px;
+  }
 }
 .team-list__thumb {
   width: 270px;
   height: 260px;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 1199px) {
+  .team-list__thumb {
+    width: 354px;
+    height: 374px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .team-list__thumb {
+    width: 450px;
+    height: 460px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .team-list__thumb {
+    min-width: 290px;
+    max-width: 450px;
+    width: 100%;
+  }
 }
 .team-list__thumb > img {
   display: block;
@@ -938,89 +955,22 @@ button {
   transition: background-color 500ms linear;
 }
 
-@media (max-width: 1199px) {
-  .team {
-    padding: 60px 0;
-    max-width: 768px;
-  }
-  .team__title {
-    font-size: 28px;
-    font-weight: 700;
-    letter-spacing: 0.03em;
-    line-height: normal;
-    text-decoration: none;
-    text-transform: normal;
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  .team-list {
-    display: flex;
-    flex-wrap: wrap;
-    width: 768px;
-    gap: 30px;
-  }
-  .team-list__item {
-    width: 354px;
-  }
-  .team-list__thumb {
-    width: 354px;
-    height: 374px;
-    margin-bottom: 30px;
-  }
-}
-@media (max-width: 767px) {
-  .team {
-    padding: 60px 15px;
-    max-width: 480px;
-  }
-  .team__title {
-    font-size: 28px;
-    font-weight: 700;
-    letter-spacing: 0.03em;
-    line-height: normal;
-    text-decoration: none;
-    text-transform: normal;
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  .team-list {
-    display: flex;
-    flex-wrap: wrap;
-    width: 480px;
-    gap: 30px;
-  }
-  .team-list__item {
-    width: 450px;
-  }
-  .team-list__thumb {
-    width: 450px;
-    height: 460px;
-    margin-bottom: 30px;
-  }
-}
 .customers {
-  width: 1600px;
   padding-top: 94px;
   padding-bottom: 94px;
 }
 @media screen and (max-width: 1199px) {
   .customers {
     padding: 60px 0;
-    width: 768px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .customers {
-    width: 480px;
   }
 }
 .customers__title {
   font-size: 36px;
   font-weight: 700;
-  letter-spacing: normal;
+  letter-spacing: 1.08px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #212121;
   margin-bottom: 50px;
@@ -1029,37 +979,22 @@ button {
   .customers__title {
     font-size: 28px;
     font-weight: 700;
-    letter-spacing: normal;
+    letter-spacing: 0.84px;
     line-height: normal;
     text-decoration: none;
-    text-transform: normal;
+    text-transform: none;
     text-align: center;
-    margin: 0 227px 30px;
-    width: 314px;
-  }
-}
-@media screen and (max-width: 1199px) {
-  .customers__title {
     margin: 0 auto 30px;
   }
 }
 
 .customers-list {
-  width: 1200px;
   margin: 0 auto;
 }
 @media screen and (max-width: 1199px) {
   .customers-list {
-    width: 768px;
-    display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     gap: 30px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .customers-list {
-    width: 480px;
   }
 }
 .customers-list__item {
@@ -1070,12 +1005,12 @@ button {
 }
 @media screen and (max-width: 1199px) {
   .customers-list__item {
-    width: 226px;
+    width: calc((100% - 60px) / 3);
   }
 }
 @media screen and (max-width: 767px) {
   .customers-list__item {
-    width: 210px;
+    width: calc((100% - 30px) / 2);
   }
 }
 .customers-list__item:hover .customers-list__svg {
@@ -1104,65 +1039,85 @@ button {
 
 .footer {
   background-color: #2F303A;
-  padding: 60px 215px;
+  padding: 60px 0;
+}
+
+.footer .inner-container {
+  display: flex;
 }
 @media screen and (max-width: 1199px) {
-  .footer {
-    max-width: 768px;
-    display: flex;
+  .footer .inner-container {
     flex-wrap: wrap;
-    padding: 60px 0;
-  }
-}
-@media screen and (max-width: 767px) {
-  .footer {
-    max-width: 480px;
+    justify-content: space-around;
+    align-items: baseline;
+    gap: 60px;
   }
 }
 
-.footer-wrapper {
-  display: flex;
-  width: 1200px;
-  margin: 0 auto;
+.address {
+  width: 232px;
+  margin-right: 70px;
 }
 @media screen and (max-width: 1199px) {
-  .footer-wrapper {
-    width: 768px;
-    flex-wrap: wrap;
+  .address {
+    text-align: center;
+    margin-right: 0;
   }
 }
-@media screen and (max-width: 767px) {
-  .footer-wrapper {
-    width: 480px;
+.address__street {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
+@media screen and (max-width: 1199px) {
+  .address__street {
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
   }
 }
-.footer-wrapper__left {
-  width: 232px;
-}
-.footer-wrapper__left a:hover {
-  color: #2196f3;
-  transition: color 500ms ease-out;
-}
-.footer-wrapper__left a:focus {
-  color: #2196f3;
-  transition: color 500ms ease-out;
-}
-.footer-wrapper a:focus {
-  color: #2196f3;
-  transition: color 500ms ease-out;
-}
-.footer-wrapper__street {
+.address__city {
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.03em;
   line-height: 1.71;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   margin-top: 20px;
-  margin-bottom: 9px;
   font-style: normal;
   color: #ffffff;
+}
+.address__city:hover, .address__city:focus {
+  color: #2196f3;
+  transition: color 500ms ease-out;
+}
+.address__link {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: normal;
+  text-decoration: none;
+  text-transform: none;
+  text-align: left;
+  text-decoration: none;
+  color: #AFB1B8;
+  font-style: normal;
+}
+.address__link:hover, .address__link:focus {
+  color: #2196f3;
+  transition: color 500ms ease-out;
+}
+@media screen and (max-width: 1199px) {
+  .address__link {
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0.02em;
+    line-height: normal;
+    text-decoration: none;
+    text-transform: none;
+    text-align: center;
+  }
 }
 
 .logo__link {
@@ -1172,62 +1127,26 @@ button {
   letter-spacing: 0.03em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: #ffffff;
 }
 @media screen and (max-width: 1199px) {
   .logo__link {
-    width: 154px;
     font-size: 24px;
   }
 }
 
-.footer-contact-list {
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: normal;
-  text-decoration: none;
-  text-transform: normal;
-  text-align: left;
-}
-.footer-contact-list__link {
-  text-decoration: none;
-  color: #AFB1B8;
-}
-@media screen and (max-width: 1199px) {
-  .footer-contact-list__link {
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: 0.02em;
-    line-height: normal;
-    text-decoration: none;
-    text-transform: normal;
-    text-align: center;
-    margin-left: 39px;
-  }
-}
-.footer-contact-list__item {
-  margin-top: 9px;
-}
-
 .join {
-  margin-left: 70px;
   padding-top: 12px;
 }
 @media screen and (max-width: 1199px) {
   .join {
-    margin-left: 0;
     padding: 0;
+    justify-content: center;
+    align-items: center;
   }
 }
-@media screen and (max-width: 767px) {
-  .join {
-    margin: 60px 137px 0;
-  }
-}
-
 .join__title {
   color: #FFF;
   font-size: 14px;
@@ -1238,12 +1157,6 @@ button {
   text-transform: uppercase;
   text-align: left;
   margin-bottom: 20px;
-}
-@media screen and (max-width: 1199px) {
-  .join__title {
-    margin-top: 12px;
-    margin-left: 46px;
-  }
 }
 
 .footer-links-list {
@@ -1272,18 +1185,13 @@ button {
 }
 
 .telegram {
+  max-width: 570px;
+  width: 100%;
   padding-top: 12px;
-  width: 570px;
 }
 @media screen and (max-width: 1199px) {
   .telegram {
-    width: 450px;
-    margin-left: 166px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .telegram {
-    margin-left: 15px;
+    max-width: 450px;
   }
 }
 
@@ -1302,7 +1210,8 @@ button {
   }
 }
 .footer-form__input {
-  width: 358px;
+  max-width: 358px;
+  width: 100%;
   height: 50px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1314,6 +1223,16 @@ button {
   cursor: pointer;
   margin-top: 20px;
   margin-right: 12px;
+}
+@media screen and (max-width: 1199px) {
+  .footer-form__input {
+    max-width: 450px;
+  }
+}
+@media screen and (max-width: 451px) {
+  .footer-form__input {
+    max-width: 320px;
+  }
 }
 .footer-form__label {
   display: block;
@@ -1329,7 +1248,6 @@ button {
 @media screen and (max-width: 1199px) {
   .footer-form__label {
     text-align: center;
-    margin-top: 60px;
   }
 }
 .footer-form__icon {
@@ -1343,7 +1261,7 @@ button {
   letter-spacing: 0.96px;
   line-height: 30px;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   width: 200px;
   height: 50px;
@@ -1377,11 +1295,5 @@ button {
   }
   100% {
     background-color: #2196f3;
-  }
-}
-@media screen and (max-width: 1199px) {
-  .address {
-    margin: 0 124px;
-    text-align: center;
   }
 }/*# sourceMappingURL=main.css.map */
