--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -35,7 +35,7 @@
   justify-content: center;
 }
 
-.join, .footer-wrapper__left, .contacts-list, .pages-list {
+.join, .contacts-list, .pages-list {
   display: flex;
   flex-direction: column;
 }
@@ -189,7 +189,7 @@ button {
   letter-spacing: 0.03em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: #212121;
   margin: 0 88px 0 0;
@@ -210,13 +210,19 @@ button {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .navigation {
+    display: none;
+  }
+}
+
 .nav-list {
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.02em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   width: 281px;
 }
@@ -259,7 +265,7 @@ button {
   letter-spacing: 0.02em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: #757575;
 }
@@ -351,7 +357,7 @@ button {
   letter-spacing: 0.8px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #212121;
 }
@@ -368,7 +374,7 @@ button {
   letter-spacing: 0.68px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #2196f3;
 }
@@ -378,7 +384,7 @@ button {
   letter-spacing: 0.48px;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #757575;
 }
@@ -395,7 +401,7 @@ button {
   letter-spacing: 0.36px;
   line-height: 1.22;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   color: #2196f3;
 }
@@ -415,9 +421,7 @@ button {
 }
 @media screen and (max-width: 1199px) {
   .buttons-list {
-    margin: 0 97px 0 97px;
     flex-wrap: wrap;
-    margin: 0;
   }
 }
 @media screen and (max-width: 767px) {
@@ -431,7 +435,7 @@ button {
   letter-spacing: 0.48px;
   line-height: 1.62;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
 }
 
@@ -440,44 +444,21 @@ button {
     margin-bottom: 15px;
   }
 }
+main .inner-container {
+  padding: 94px 0;
+}
+@media screen and (max-width: 1199px) {
+  main .inner-container {
+    padding: 60px 15px;
+  }
+}
+
 .overlay:hover {
   background-color: rgba(33, 150, 243, 0.9);
   position: absolute;
   top: 0;
   cursor: pointer;
   transition: background-color 1s ease;
-}
-
-.main-wrapper {
-  width: 1200px;
-  margin: 0 auto;
-  background-color: #ffffff;
-  padding: 94px 0;
-}
-@media screen and (max-width: 1199px) {
-  .main-wrapper {
-    padding: 60px 15px;
-    width: 768px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .main-wrapper {
-    width: 480px;
-  }
-}
-
-.projects {
-  width: 1200px;
-}
-@media screen and (max-width: 1199px) {
-  .projects {
-    width: 768px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .projects {
-    width: 480px;
-  }
 }
 
 .projects li {
@@ -523,7 +504,7 @@ button {
   letter-spacing: 0.06em;
   line-height: 36px;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   margin: 20px 24px 4px 24px;
   color: #212121;
@@ -534,7 +515,7 @@ button {
   letter-spacing: 0.54px;
   line-height: 1.55;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: #FFF;
   font-family: "Roboto";
@@ -551,7 +532,7 @@ button {
   letter-spacing: 0.03em;
   line-height: 30px;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   margin: 4px 24px 20px 24px;
   color: #757575;
@@ -582,70 +563,91 @@ button {
     margin: 4px 24px 56px 24px;
   }
   .works-list__name--2 {
-    width: 306px;
+    max-width: 306px;
+    width: 100%;
   }
 }
 .footer {
   background-color: #2F303A;
-  padding: 60px 215px;
+  padding: 60px 0;
+}
+
+.footer .inner-container {
+  display: flex;
 }
 @media screen and (max-width: 1199px) {
-  .footer {
-    max-width: 768px;
-    display: flex;
+  .footer .inner-container {
     flex-wrap: wrap;
-    padding: 60px 0;
-  }
-}
-@media screen and (max-width: 767px) {
-  .footer {
-    max-width: 480px;
+    justify-content: space-around;
+    align-items: baseline;
+    gap: 60px;
   }
 }
 
-.footer-wrapper {
-  display: flex;
-  width: 1200px;
-  margin: 0 auto;
+.address {
+  width: 232px;
+  margin-right: 70px;
 }
 @media screen and (max-width: 1199px) {
-  .footer-wrapper {
-    width: 768px;
-    flex-wrap: wrap;
+  .address {
+    text-align: center;
+    margin-right: 0;
   }
 }
-@media screen and (max-width: 767px) {
-  .footer-wrapper {
-    width: 480px;
+.address__street {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
+@media screen and (max-width: 1199px) {
+  .address__street {
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
   }
 }
-.footer-wrapper__left {
-  width: 232px;
-}
-.footer-wrapper__left a:hover {
-  color: #2196f3;
-  transition: color 500ms ease-out;
-}
-.footer-wrapper__left a:focus {
-  color: #2196f3;
-  transition: color 500ms ease-out;
-}
-.footer-wrapper a:focus {
-  color: #2196f3;
-  transition: color 500ms ease-out;
-}
-.footer-wrapper__street {
+.address__city {
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.03em;
   line-height: 1.71;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   margin-top: 20px;
-  margin-bottom: 9px;
   font-style: normal;
   color: #ffffff;
+}
+.address__city:hover, .address__city:focus {
+  color: #2196f3;
+  transition: color 500ms ease-out;
+}
+.address__link {
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: normal;
+  text-decoration: none;
+  text-transform: none;
+  text-align: left;
+  text-decoration: none;
+  color: #AFB1B8;
+  font-style: normal;
+}
+.address__link:hover, .address__link:focus {
+  color: #2196f3;
+  transition: color 500ms ease-out;
+}
+@media screen and (max-width: 1199px) {
+  .address__link {
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0.02em;
+    line-height: normal;
+    text-decoration: none;
+    text-transform: none;
+    text-align: center;
+  }
 }
 
 .logo__link {
@@ -655,62 +657,26 @@ button {
   letter-spacing: 0.03em;
   line-height: normal;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: left;
   color: #ffffff;
 }
 @media screen and (max-width: 1199px) {
   .logo__link {
-    width: 154px;
     font-size: 24px;
   }
 }
 
-.footer-contact-list {
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: normal;
-  text-decoration: none;
-  text-transform: normal;
-  text-align: left;
-}
-.footer-contact-list__link {
-  text-decoration: none;
-  color: #AFB1B8;
-}
-@media screen and (max-width: 1199px) {
-  .footer-contact-list__link {
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: 0.02em;
-    line-height: normal;
-    text-decoration: none;
-    text-transform: normal;
-    text-align: center;
-    margin-left: 39px;
-  }
-}
-.footer-contact-list__item {
-  margin-top: 9px;
-}
-
 .join {
-  margin-left: 70px;
   padding-top: 12px;
 }
 @media screen and (max-width: 1199px) {
   .join {
-    margin-left: 0;
     padding: 0;
+    justify-content: center;
+    align-items: center;
   }
 }
-@media screen and (max-width: 767px) {
-  .join {
-    margin: 60px 137px 0;
-  }
-}
-
 .join__title {
   color: #FFF;
   font-size: 14px;
@@ -721,12 +687,6 @@ button {
   text-transform: uppercase;
   text-align: left;
   margin-bottom: 20px;
-}
-@media screen and (max-width: 1199px) {
-  .join__title {
-    margin-top: 12px;
-    margin-left: 46px;
-  }
 }
 
 .footer-links-list {
@@ -755,18 +715,13 @@ button {
 }
 
 .telegram {
+  max-width: 570px;
+  width: 100%;
   padding-top: 12px;
-  width: 570px;
 }
 @media screen and (max-width: 1199px) {
   .telegram {
-    width: 450px;
-    margin-left: 166px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .telegram {
-    margin-left: 15px;
+    max-width: 450px;
   }
 }
 
@@ -785,7 +740,8 @@ button {
   }
 }
 .footer-form__input {
-  width: 358px;
+  max-width: 358px;
+  width: 100%;
   height: 50px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -797,6 +753,16 @@ button {
   cursor: pointer;
   margin-top: 20px;
   margin-right: 12px;
+}
+@media screen and (max-width: 1199px) {
+  .footer-form__input {
+    max-width: 450px;
+  }
+}
+@media screen and (max-width: 451px) {
+  .footer-form__input {
+    max-width: 320px;
+  }
 }
 .footer-form__label {
   display: block;
@@ -812,7 +778,6 @@ button {
 @media screen and (max-width: 1199px) {
   .footer-form__label {
     text-align: center;
-    margin-top: 60px;
   }
 }
 .footer-form__icon {
@@ -826,7 +791,7 @@ button {
   letter-spacing: 0.96px;
   line-height: 30px;
   text-decoration: none;
-  text-transform: normal;
+  text-transform: none;
   text-align: center;
   width: 200px;
   height: 50px;
@@ -860,11 +825,5 @@ button {
   }
   100% {
     background-color: #2196f3;
-  }
-}
-@media screen and (max-width: 1199px) {
-  .address {
-    margin: 0 124px;
-    text-align: center;
   }
 }/*# sourceMappingURL=portfolio.css.map */
