--- a/SASS/components/studio/_menu.scss
+++ b/SASS/components/studio/_menu.scss
@@ -68,3 +68,8 @@
   height: 22px;
   background-color: rgba(33, 33, 33, 0.2);
 }
+@media screen and (min-width: 768px) {
+  .menu{
+    display: none;
+  }
+}
