--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -412,6 +412,11 @@ button {
   background-color: rgba(33, 33, 33, 0.2);
 }
 
+@media screen and (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
 .buttons-list {
   display: flex;
   gap: 8px;
