--- a/SASS/components/studio/_hero.scss
+++ b/SASS/components/studio/_hero.scss
@@ -8,7 +8,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/img/background/desktop.jpg");
+    url("./img/background/desktop.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -22,7 +22,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/img/background/desktop@2x.png");
+      url("./img/background/desktop@2x.png");
   }
   @media screen and (max-width: 1199px) {
     padding: 118px 0;
@@ -31,7 +31,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/img/background/tablet.png");
+      url("./img/background/tablet.png");
     @media screen and (min-device-pixel-ratio: 2),
       (-webkit-min-device-pixel-ratio: 2),
       (-o-min-device-pixel-ratio: 2/1),
@@ -42,7 +42,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url("/img/background/tablet@2x.png");
+        url("./img/background/tablet@2x.png");
     }
   }
   @media screen and (max-width: 767px) {
@@ -51,7 +51,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/img/background/phone.png");
+      url("./img/background/phone.png");
     @media screen and (min-device-pixel-ratio: 2),
       (-webkit-min-device-pixel-ratio: 2),
       (-o-min-device-pixel-ratio: 2/1),
@@ -62,7 +62,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url("/img/background/phone@2x.png");
+        url("./img/background/phone@2x.png");
     }
   }
   &__title {
